stdlib: fix matrix function